# dbt_docs_test

./: .coderabbit.yaml  .dbt-checkpoint.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup_tooling.sh
projects/ab-test-analysis/: README.md  docker-compose.yaml  pyproject.toml
projects/ab-test-analysis/ab_test_analysis/: analysis.py  visualisation.py
projects/ab-test-analysis/app/: run_app.py  section_analysis.py  section_get_data.py  session_states.py  spark_context.py
projects/ab-test-analysis/docker/: Dockerfile  Dockerfile.databricks  Dockerfile.testing
projects/ab-test-analysis/sandbox/: dev.ipynb
projects/ab-test-analysis/sqls/: example_binary_response.sql  example_continuous_response.sql
projects/analytics-api/: .dockerignore  .env.example  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/analytics-api/analytics_api/: cli.py  main.py  settings.py  store.py
projects/analytics-api/docker/: Dockerfile  Dockerfile.databricks  Dockerfile.testing
projects/analytics-api/jobs/: run.py
projects/analytics_api/: README.md  docker-compose.yaml  pyproject.toml
projects/analytics_api/docker/: Dockerfile  Dockerfile.databricks  Dockerfile.testing
projects/analytics_api/jobs/: run.yml
projects/attribute-scoring/: README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/attribute-scoring/attribute_scoring/: cli.py  common.py  db.py  paths.py
projects/attribute-scoring/docker/: Dockerfile  Dockerfile.databricks  Dockerfile.testing
projects/attribute-scoring/jobs/: 0_model_tune.py  1_model_train.py  2_predict.py  predict.yml  train.yml  tune.yml
projects/attribute-scoring/streamlit_app/: Attribute_Scoring.py
projects/attribute-scoring/tests/: test_attribute_scoring.py
projects/churn-ai/: Dockerfile  README.md  pyproject.toml
projects/churn-ai/churn_ai/: baseline.py  config.py  constants.py  gen.py  main.py  model.py  model_logreg.py  prep.py  tst.py
projects/churn-ai/config/: settings.dev.yml
projects/churn-ai/scripts/: docker-run.sh  format.sh  lint.sh  run.sh
projects/customer-churn/: .gitignore  Dockerfile  Dockerfile.databricks  Dockerfile.testing  Makefile  README.md  app.py  databricks.yml  docker-compose.yaml  pyproject.toml
projects/customer-churn/configs/: features.yml  mlflow.yml  train.yml
projects/customer-churn/customer_churn/: baseline.py  cli.py  config.py  constants.py  data_models.py  env.py  features.py  generate_snapshot.py  model.py  model_contract.py  model_logreg.py  owner.py  paths.py  predict.py  preprocessor.py  run_feature_generation.py  run_predict.py  run_training.py  run_trainining.py  snapshot.py  train.py
projects/customer-churn/notebooks/: MakeChurnPredictions.py  customer_churn_generate_snapshot.py  customer_churn_predict.py  customer_churn_train_model.py  read_dataset.ipynb
projects/customer-churn/scripts/: set_sys_path.py  setup_cluster.sh
projects/customer-churn/tests/: __init__.py  data.py  helpers.py  test_feature_generation.py  test_model_training.py  test_prep_get_snapshot.py  test_prep_get_snapshot2.py
projects/customer-churn/workflows/: customer_churn_generate_features.py  customer_churn_predict.py  customer_churn_train_model.py
projects/data-catalog/: .gitignore  Dockerfile  Dockerfile.testing  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/data-catalog/data_catalog/: load_contracts.py  main.py  settings.py
projects/data-catalog/jobs/: materialize.py  materialize.yml
projects/data-catalog/tests/: test_example.py
projects/data-model/: .gitignore  Dockerfile  Dockerfile.databricks  README.md  bundle.resources.yml  bundle.targets.yml  databricks.yml  docker-compose.yaml  pyproject.toml
projects/data-model/01. bronze/: bronze_cms.py  bronze_cms_billing_agreement_order.py  bronze_cms_campaign_events.py  bronze_cms_full.py  bronze_psl_full.py
projects/dishes-forecasting/: Dockerfile  Dockerfile.databricks  Dockerfile.testing  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/menu-optimiser/: .env.example  README.md  apps.py  databricks.yml  docker-compose.yaml  pyproject.toml
projects/ml-example-project/: README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/ml-feature-store/: Dockerfile  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/my-awesome-project/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
projects/orders-forecasting/: .gitignore  Dockerfile  Dockerfile.databricks  Dockerfile.testing  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/personalization/: CHANGELOG.md  Dockerfile  Makefile  pyodbc-4.0.35-cp310-cp310-macosx_11_0_arm64.whl  pyproject.toml
projects/powerbi/: .gitignore  Cheffelo-Theme.json  README.md  Rules-Dataset.json  pyproject.toml
projects/preselector/: .devcontainer.json  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.testing  README.md  app.py  apps.py  combinations_app.py  combinations_store_output.py  concept_definition_app.py  cost_of_food_app.py  databricks.yml  debug_app.py  deploy_to_azure.py  docker-compose.yaml  keyvault.py  pyproject.toml
projects/preselector/jobs/: deploy.py  (+12 more)
projects/project-f/: .gitignore  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/rec-engine/: .dockerignore  .gitignore  Dockerfile  Dockerfile.databricks  Dockerfile.jupyter  Dockerfile.test  Dockerfile.ui  README.md  app_ui.py  bundle_config_schema.json  catalog_setup.py  databricks.yml  docker-compose.yaml  pyproject.toml  settings.py  test_env.py
projects/reci-pick/: .dockerignore  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/recipe-search/: Dockerfile  README.md  pyproject.toml
projects/recipe-tagging/: README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/review-screener/: .dockerignore  .gitignore  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
projects/tofu/: .gitignore  README.md  databricks.yml  docker-compose.yaml  pyproject.toml
(+3117 files in other folders)
