[tool.poetry]
name = "sous-chef"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.5.0"
chef = {path = "packages/chef", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "W",    # pycodestyle (warnings)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EXE",  # flake8-executable
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8--use-pathlib
    "ERA",  # flake8-eradicate
    "RUF",  # ruff specific rules
    "PL",   # pylint
]
lint.ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN204", # Missing type annotation for special method
    "UP017",
    "DTZ011", # Use of `datetime.now` without timezone
]
lint.pylint.max-args = 6
line-length = 120
target-version = "py311"
