[tool.poetry]
name = "sous-chef"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.5.0"
chef = {path = "packages/chef", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pyright]
exclude = ["**/jobs/**"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "W",    # pycodestyle (warnings)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EXE",  # flake8-executable
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8--use-pathlib
    "ERA",  # flake8-eradicate
    "RUF",  # ruff specific rules
    "PL",   # pylint
]
lint.ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN204", # Missing type annotation for special method
    "UP017",
    "DTZ011", # Use of `datetime.now` without timezone
    "ARG001", # Unused function argument
    "ARG002", # Unused argument
    "ARG004", # Unused static argument
    "ARG005", # Unused lambda variable
    "SIM108", # Enforce turnary expression
    "SIM117", # Enforce multiple context managers on one line
    "SIM110",
    "ERA001",
    "COM812",
    "C408",
    "PLR0912", # Too many branches
    "PLR0913",
    "PLR0915", # Too many statements
    "PT023", # Use `@pytest.mark.asyncio` over `@pytest.mark.asyncio()`
    "PT001", # Use `@pytest.fixture` over `@pytest.fixture()`
    "RUF012"
]
lint.pylint.max-args = 7
line-length = 120
lint.pyupgrade.keep-runtime-typing = true
target-version = "py39"
extend-exclude = ["**/notebooks/**"]

[tool.ruff.lint.per-file-ignores]
"**/jobs/**.py" = [
    # Modules at top
    "E402",
    # Attribute do not exist -> due to dbutils
    "F821",
    # Async functions in notebooks
    "F704",
    "PLE1142"
]
"**/tests/**.py" = [
    # Magic numbers
    "PLR2004"
]
