[tool.poetry]
name = "analytics_api"
version = "0.1.0"
description = "Collection of endpoints serving various ML products"
authors = ["Niladri Banerjee <niladri.banerjee@cheffelo.com>"]
packages = [{include = "analytics_api"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.1.0"

[tool.poetry.group.cli.dependencies]
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}

[tool.poetry.group.databricks.dependencies]
databricks-env = {path = "../../packages/databricks-env", develop = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'
