[tool.poetry]
name = "attribute-scoring"
version = "0.1.0"
description = "A Python project by Cheffelo."
authors = ["Agathe Raaum <agathe.raaum@cheffelo.com>"]
packages = [{include = "attribute_scoring"}]

[tool.poetry.dependencies]
python = "^3.11.9"
pydantic-settings = "^2.1.0"
streamlit = "^1.40.0"
constants = {path = "../../packages/constants", develop = true}
scikit-learn = "1.5.2"
xgboost = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
petname = "^2.6"
optuna = "^4.0.0"
optuna-integration = "^4.0.0"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
imbalanced-learn = "^0.12.4"
msal = "^1.31.0"
pyright = "^1.1.391"
mlflow = "^2.19.0"

slack-connector = {path = "../../packages/slack-connector", develop = true}
catalog-connector = {path = "../../packages/catalog-connector", develop = true}
data-contracts = {path = "../../packages/data-contracts", develop = true}
key-vault = {path = "../../packages/key-vault", develop = true}
model-registry = {path = "../../packages/model-registry", develop = true}

[tool.poetry.group.cli.dependencies]
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}
pyright = "*"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'

[tool.pyright]
exclude = [
    "**/jobs/**.py",
    ".venv",
    "streamlit_app/**",
]

[tool.ruff]
exclude = [
    "**/jobs/**.py",
    ".venv",
    "streamlit_app/**",
    "**/*.ipynb",
]
