[tool.poetry]
name = "churn-ai"
version = "0.1.0"
description = "A Python project by Cheffelo."
authors = ["Your full name <Your email address>"]
packages = [{include = "churn-ai"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "*"
pyyaml = "*"
pandas = "^1.4.2"
pytest = "*"
seaborn = "*"
scikit-learn = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
