[tool.poetry]
name = "data-catalog"
version = "0.1.0"
description = "A data catalog for the ML data used in Cheffelo"
authors = ["Mats E. Mollestad <mats.mollestad@cheffelo.com>"]
packages = [{include = "data_catalog"}]

[tool.poetry.dependencies]
python = "^3.10"
data-contracts = {path = "../../packages/data-contracts", develop = true, extras=["mssql", "databricks"]}
streamlit = "^1.30.0"
pydantic-settings = "^2.1.0"
project-owners = {path = "../../packages/project-owners", develop = true}
sqlalchemy = "^2.0.29"
fsspec = "^2024.3.1"
adlfs = "^2024.2.0"
numpy = "^1.0.0"
streamlit-deeplinker = "^0.1.2"
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}
key-vault = {path = "../../packages/key-vault", develop = true}
nest_asyncio = "1.6.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pyright = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'
