[tool.poetry]
name = "data-model"
version = "0.1.0"
description = "Code for the ETL process in the data plattform."
authors = ["Marie Borg <marie.borg@cheffelo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic-settings = "^2.1.0"
dbt-databricks = ">=1.0.0,<2.0.0"

[tool.poetry.group.cli.dependencies]
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
sqlfluff= "*"
chef = {path = "../../packages/chef", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'
