[tool.poetry]
name = "data-model"
version = "0.1.0"
description = "Code for the ETL process in the data plattform."
authors = ["Marie Borg <marie.borg@cheffelo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic-settings = "^2.1.0"
dbt-databricks = ">=1.10.0,<1.10.9"
dbt-chef = {path = "../../packages/dbt-chef", develop = true}
urllib3 = "2.3.0"
powerbi-chef = {path = "../../packages/powerbi-chef", develop = true}
aiohttp = "^3.12.14"
customerio = "^2.2"

[tool.poetry.group.cli.dependencies]
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
sqlfluff-templater-dbt = "*"
chef = {path = "../../packages/chef", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
