[tool.poetry]
name = "menu-optimiser"
version = "0.1.0"
description = "Algorithm to generate automatically a list of recipes for a given week, year, company satisfying specific business criteria"
authors = ["Niladri Banerjee,PhD <niladri.banerjee@cheffelo.com>"]
packages = [{include = "menu_optimiser"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.1.0"
pandas = "2.2.2"
data-contracts = {path = "../../packages/data-contracts", develop = true}
numpy = "1.26.4"
code2flow = "^2.5.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.cli.dependencies]
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}
pyright = "*"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'

[tool.ruff.lint.per-file-ignores]
"menu_optimiser/optimization.py" = ["PLC0206"]
