[tool.poetry]
name = "menu-optimiser"
version = "0.1.0"
description = "Algorithm to generate automatically a list of recipes for a given week, year, company satisfying specific business criteria"
authors = ["Niladri Banerjee,PhD <niladri.banerjee@cheffelo.com>"]
packages = [{include = "menu_optimiser"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.1.0"
pandas = "2.2.2"
data-contracts = {path = "../../packages/data-contracts", develop = true}
numpy = "1.26.4"
code2flow = "^2.5.1"
scikit-learn = "^1.6.1"
streamlit = "^1.45.1"
constants = {path = "../../packages/constants", develop = true}
catalog-connector = {path = "../../packages/catalog-connector", develop = true}
seaborn = "^0.13.2"
plotly = "^6.1.2"
pandera = "^0.24.0"
key-vault = {path = "../../packages/key-vault", develop = true}
pulp = "^3.2.1"
streamlit-helper = {path = "../../packages/streamlit-helper", develop = true}

[tool.poetry.group.cli.dependencies]
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}
pyright = "*"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'

[tool.ruff.lint.per-file-ignores]
"menu_optimiser/optimization.py" = ["PLC0206"]

[tool.pyright]
exclude = [
    "**/jobs/**.py",
    ".venv",
    "streamlit_app/**",
    "apps.py"
]
