[tool.poetry]
name = "my-awesome-project"
version = "0.1.0"
description = "A Python project by Cheffelo."
authors = ["Mats Eikeland Mollestad <mats.mollestad@cheffelo.com>"]
packages = [{include = "my_awesome_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.1.0"

[tool.poetry.group.app.dependencies]
streamlit = "^1.30.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'
