[tool.poetry]
name = "rec-engine"
version = "0.1.0"
description = "A Python project by Cheffelo."
authors = ["Mats Eikeland Mollestad <mats.mollestad@cheffelo.com>"]
packages = [{include = "rec_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.1.0"
data-contracts = {path = "../../packages/data-contracts", develop = true, extras = ["mssql"]}
scikit-learn = "^1.4.0"
mlflow = "^2.10.1"
pydantic-form = {path = "../../packages/pydantic-form", develop = true}
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}
adlfs = "^2024.2.0"
project-owners = {path = "../../packages/project-owners", develop = true}
aioodbc = "0.4.1"
pyodbc = {version = "4.0.35" }
databricks-env = {path = "../../packages/databricks-env", develop = true}
polars-lts-cpu = "0.20.31"
numpy = "1.26.4"

[tool.poetry.group.app.dependencies]
streamlit = "^1.30.0"

[tool.poetry.group.dev.dependencies]
chef = {path = "../../packages/chef", develop = true}
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
pyright = "^1.1.376"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'
